[package]
name = "youtube_comment_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
async-stream = "0.3.2"
futures-util = "0.3.21"
clap = { version = "3.1.6", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
openssl = { version = '0.10', optional = true }
anyhow = "1.0"
const_format = "0.2.23"

[features]
vendored-openssl = ["openssl/vendored"]